--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     border-radius: 10px;
     margin: 30px auto;
     display: block;
-    background-color: #88D8B0; 
+    background-color: #cd90cf; 
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
  }
  .dice-img {
